--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2 
         
       - name: Install Dependencies
-        run: sudo apt install -y golang-1.9 npm make
+        run: sudo apt install -y golang npm make
         
       - name: Install Angular
         run: sudo npm install -g @angular/cli
