Updated shell command handling

--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,8 @@ max_ws_terminals: 10
 server_bind_address: 127.0.0.1:7171
 xpra_ws_address: ws://127.0.0.1:2000/
 debug: false
-shell_command: bash
-add_sf_ui_args: false
+shell_command: sshpass -p segfault ssh -o "SetEnv SECRET=%[1]s" root@teso.segfault.net 
+add_sf_ui_args: true
 sf_endpoint: "segfault.net"
 sf_ui_origin: http://127.0.0.1:7171
 disable_origin_check: true
