--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: sfui
-          path: bin/sfui
+          path: |
+            bin/sfui
+            config.yaml
           retention-days: 365  
