--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,6 @@ disable_origin_check: true
 use_x_forwarded_for_header: false
 disable_desktop: false
 work_directory: /dev/shm
-master_ssh_command:         "sshpass -p segfault ssh -M -S %s/ssh.sock -L %s/gui.sock:127.0.0.1:2000 -o \"SetEnv SECRET=%s REMOTE_ADDR=%s\" root@%s"
+master_ssh_command:         "sshpass -p segfault ssh -M -S %s/ssh.sock -L %s/gui.sock:127.0.0.1:2000 -o \"SetEnv SECRET=%s REMOTE_ADDR=%s\" root@%s -t sh"
 teardown_master_ssh_command: "sshpass -p segfault ssh -S %s/ssh.sock -O exit root@%s"
 slave_ssh_command:          "sshpass -p segfault ssh -S %s/ssh.sock -o \"SetEnv SECRET=%s REMOTE_ADDR=%s\" root@%s"
