--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: cd ui && npm install
         
       - name: Make All
-        run: make all
+        run: NODE_OPTIONS=--openssl-legacy-provider make all
         
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v3
