--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "tslib": "^2.3.0",
+    "xterm": "^5.1.0",
     "xterm-addon-attach": "^0.8.0",
     "xterm-addon-fit": "^0.7.0",
     "xterm-addon-webgl": "^0.14.0"
