--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,7 @@
     "xterm": "^5.2.1",
     "xterm-addon-attach": "^0.8.0",
     "xterm-addon-fit": "^0.7.0",
+    "xterm-addon-web-links": "^0.8.0",
     "xterm-addon-webgl": "^0.15.0",
     "zone.js": "^0.13.1"
   },
