add: migrate to use ssh library

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ max_shared_desktop_conn: 4
 ws_ping_interval: 20 # seconds
 ws_timeout: 1080 # minutes
 server_bind_address: 0.0.0.0:7171
-debug: false
+debug: true
 sf_endpoints: 
   - "8lgm.segfault.net"
   - "adm.segfault.net"
@@ -12,10 +12,9 @@ disable_origin_check: true
 use_x_forwarded_for_header: false
 disable_desktop: false
 work_directory: /dev/shm
-master_ssh_command: 'sshpass -p segfault ssh -M -S %s/ssh.sock -L %s/gui.sock:127.0.0.1:5900 -L %s/fb.sock:127.0.0.1:2900 -o "SetEnv SECRET=%s REMOTE_ADDR=%s" root@%s -t bash'
-teardown_master_ssh_command: "sshpass -p segfault ssh -S %s/ssh.sock -O exit root@host.com"
-slave_ssh_command: 'sshpass -p segfault ssh -S %s/ssh.sock -o "SetEnv SECRET=%s REMOTE_ADDR=%s" root@%s'
-start_xpra_command: "[[ $(ss -lnt) == *2000* ]] || /sf/bin/startxweb \n"
-start_vnc_command: "[[ $(ss -lnt) == *5900* ]] || /sf/bin/startxvnc \n"
-start_filebrowser_command: "[[ $(ss -lnt) == *2900* ]] || /sf/bin/startfb \n"
+start_xpra_command: "[[ $(ss -lnt) == *2000* ]] || /sf/bin/startxweb"
+start_vnc_command: "[[ $(ss -lnt) == *5900* ]] || /sf/bin/startxvnc"
+start_filebrowser_command: "[[ $(ss -lnt) == *2900* ]] || /sf/bin/startfb"
 client_inactivity_timeout: 1
+vnc_port: 5900
+filebrowser_port: 2900
