add: country info to logger

--- a/config_example.yaml
+++ b/config_example.yaml
@@ -27,3 +27,4 @@ elastic_server_host: "sf-stats.segfault.net"
 elastic_index_name: "sf-stats"
 elastic_username: "elastic"
 elastic_password: "elastic"
+geo_ip_db_path: "geo.mmdb"
