update: compose for persisting ban data

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,4 @@ services:
       - "127.0.0.1:7171:7171"
     volumes:
       - ./config.yaml:/app/config.yaml:ro
+      - ./banDB.json:/app/banDB.json:rw
